--- a/AndroidBluetoothLE/Resources/Layout/ScanView.axml
+++ b/AndroidBluetoothLE/Resources/Layout/ScanView.axml
@@ -2,4 +2,9 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true" />
+    android:fillViewport="true">
+    <ListView
+        android:id="@+id/ScanList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</ScrollView>
