--- a/AndroidBluetoothLE/Resources/Layout/ScanMenu.axml
+++ b/AndroidBluetoothLE/Resources/Layout/ScanMenu.axml
@@ -2,6 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_search"
-        android:title="Scan" />
+        android:id="@+id/ScanAction"
+        android:title="@string/StartScan" />
+    <item
+        android:id="@+id/OpenServerAction"
+        android:title="@string/OpenServer" />
 </menu>
